--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -22,3 +22,10 @@ most_recent:
   content: "Writin a short test"  
   created_at: <%= Time.zone.now %>
   user: tiburcio
+
+<% 30.times do |n| %>
+micropost_<%= n %>:
+  content: <%= Faker::Lorem.sentence(word_count: 5) %>
+  created_at: <%= 42.days.ago %>
+  user: tiburcio
+<% end %>
