--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -1,31 +1,46 @@
-trabalho:
-  content: "Eu estou procurando emprego agora " 
-  created_at: <%= 10.minutes.ago %>
-  user: tiburcio
-
 orange:
-  content: I like to eat orange
-  created_at: <%= 1.years.ago %>
-  user: tiburcio
+  content: "I just ate an orange!"
+  created_at: <%= 10.minutes.ago %>
+  user: michael
 
-framboesa:
-  content: "I never eat framboesa"
-  created_at: <%= 10.days.ago %>
-  user: confucio
+tau_manifesto:
+  content: "Check out the @tauday site by @mhartl: http://tauday.com"
+  created_at: <%= 3.years.ago %>
+  user: michael
 
-enguespastes:
-  content: "Acredito que seja de um joguinho que permeia a cabeça da gente"
-  created_at: <%= 2.minutes.ago %>
-  user: francilvania
+cat_video:
+  content: "Sad cats are sad: http://youtu.be/PKffm2uI4dk"
+  created_at: <%= 2.hours.ago %>
+  user: michael
 
-most_recent: 
-  content: "Writin a short test"  
+most_recent:
+  content: "Writing a short test"
   created_at: <%= Time.zone.now %>
-  user: confucio
+  user: michael
 
 <% 30.times do |n| %>
 micropost_<%= n %>:
   content: <%= Faker::Lorem.sentence(word_count: 5) %>
   created_at: <%= 42.days.ago %>
-  user: tiburcio
+  user: michael
 <% end %>
+
+ants:
+  content: "Oh, is that what you want? Because that's how you get ants!"
+  created_at: <%= 2.years.ago %>
+  user: archer
+
+zone:
+  content: "Danger zone!"
+  created_at: <%= 3.days.ago %>
+  user: archer
+
+tone:
+  content: "I'm sorry. Your words made sense, but your sarcastic tone did not."
+  created_at: <%= 10.minutes.ago %>
+  user: lana
+
+van:
+  content: "Dude, this van's, like, rolling probable cause."
+  created_at: <%= 4.hours.ago %>
+  user: lana
