--- a/config/database.yml
+++ b/config/database.yml
@@ -26,6 +26,6 @@ production:
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  database: sample_app_production
-  username: sample_app
-  password: <%= ENV['SAMPLE_APP_DATABASE_PASSWORD'] %>
+  database: twitter_sample_production
+  username: twitter_sample
+  password: <%= ENV['twitter_sample_DATABASE_PASSWORD'] %>
